_kubernetes.orig2/apps/kube-system/coredns/gateway/dns-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: coredns-tcp
  namespace: kube-system
spec:
  parentRefs:
    - name: coredns
  rules:
    - backendRefs:
        - name: kube-dns
          port: 53
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: coredns-metrics
  namespace: kube-system
spec:
  parentRefs:
    - name: coredns
  rules:
    - backendRefs:
        - name: kube-dns
          port: 9153
